<resources>
    <string name="app_name">TodoApp</string>
    <string name="done_todo">Done todo</string>
    <string name="important_undone_todo">Important undone todo</string>
    <string name="normal_undone_todo">Normal undone todo</string>
    <string name="todo_priority">Priority: %1$s</string>
    <string name="deadline_is_in">Deadline is in: %1$s</string>
    <string name="information_about_task">Information about task</string>
    <string name="view_completed_todo_s">View completed todo\'s</string>
    <string name="my_tasks_todo_s">My tasks</string>
    <string name="completed_todo_s">Completed – %1$s</string>
    <string name="close_details_screen">Close details screen</string>
    <string name="save_todo">Save</string>
    <string name="what_you_need_to_do">What you need to do?</string>
    <string name="priority">Priority</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="date_of_deadline">Date of deadline</string>
    <string name="delete">Delete task</string>
    <string name="hide_completed_tasks">Hide completed tasks</string>
    <string name="show_completed_tasks">Show completed tasks</string>
    <string name="visibility_icon">Visibility icon</string>
    <string name="toolbar">Toolbar height</string>
    <string name="invalid_date_error">You can\'t pick date before today</string>
    <string name="select_theme">Select theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="system_theme">System theme</string>
    <string name="button_to_go_on_settings_screen">Button to go on Settings Screen</string>
    <string name="close_settings_screen">Close Settings screen</string>
    <string name="to_apply_the_changes_restart_the_application">To apply the changes, restart the application</string>
    <string name="animated_alpha">Animated alpha</string>
    <string name="button_to_go_on_about_screen">Button to go on About Screen</string>
    <string name="add_new_task">Add new task</string>
    <string name="field_to_text_of_todo">Field to text of Todo</string>

</resources>